--- a/2311COMP180201-TKWEB-49.01.103.051/bài tập.HTML/Trang Halloween/halloween.html
+++ b/2311COMP180201-TKWEB-49.01.103.051/bài tập.HTML/Trang Halloween/halloween.html
@@ -336,7 +336,7 @@
             <div class="box" data-aos="fade-up">
                 <h3>Contact Us</h3>
                 <a href="#"><i class="fas fa-phone"></i> 123456789 </a>
-                <a href="#"><i class="fas fa-envelope"></i> nguyenthanhquan@gmail.com</a>
+                <a href="#"><i class="fas fa-envelope"></i> tranhoangnam1107@gmail.com</a>
                 <a href="#"><i class="fas fa-map-marked-alt"></i> VietNam, TPHCM </a>
             </div>
 
@@ -348,7 +348,7 @@
                 <a href="https://www.pinterest.com/27thnhqun/"><i class="fa-brands fa-pinterest"></i> Pinterest </a>
             </div>
         </div>
-        <div class="credit">Credited By <span>Nguyễn Thành Quân</span></div>
+        <div class="credit">Credited By <span>Trần Hoàng Nam</span></div>
     </section>
     <!--footer end-->
 
