--- a/2311COMP180201-TKWEB-49.01.103.051/bài tập.HTML/MyCV/mycn.html
+++ b/2311COMP180201-TKWEB-49.01.103.051/bài tập.HTML/MyCV/mycn.html
@@ -12,7 +12,7 @@
             <img src="./image/ec9205d372eba262f45dedb7d774252b.jpg" alt="avatar" class="img-avatar">
         </div>
         <div class="title-container">
-            <h1>Nguyễn Thành Quân</h1>
+            <h1>Trần Hoàng Nam</h1>
             <h3>Sư Phạm Tin </h3>
         </div>
     </header>
@@ -22,7 +22,7 @@
                 <h1 class="title">BASIC INFORMATION</h1>
                 <div class="tag-content1">
                     <ul>
-                        <li>Ngày sinh: 08/09/2005</li>
+                        <li>Ngày sinh: 11/07/2005</li>
                         <li>Tuổi: 18</li>
                         <li>Quốc tịch: Việt Nam</li>
                     </ul>
@@ -32,9 +32,9 @@
                 <h1 class="title">CONTACT ME</h1>
                 <div class="tag-content1">
                     <ul>
-                        <li>Điện thoại: 0982631664</li>
-                        <li>Email: nguyenthanhquan8905@gmail.com</li>
-                        <li>Địa chỉ: 256 Lê Văn Quới,phường Bình Hưng Hoà A,quận Bình Tân</li>
+                        <li>Điện thoại: 0941083448</li>
+                        <li>Email: tranhoangnam1107@gmail.com</li>
+                        <li>Địa chỉ: ấp 5 Xã Tân Tây huyền Gò Công Đông tỉnh Tiền Giang</li>
                     </ul>
                 </div>
             </div>
@@ -94,10 +94,10 @@
                 <h1 class="title1">HOBBY</h1>
                 <ul>
                     <ul>
-                        <li>Cầu Lông</li>
-                        <li>Đọc Sách</li>
+                        <li>bóng đá</li>
+                        <li>nghe nhạc</li>
                         <li>Du Lịch</li>
-                        <li>Nấu Ăn</li>
+                        <li>vẽ tranh</li>
                     </ul>
                 </ul>
             </div>
