--- a/2311COMP180201-TKWEB-49.01.103.051/bài tập.HTML/Profile/profile.html
+++ b/2311COMP180201-TKWEB-49.01.103.051/bài tập.HTML/Profile/profile.html
@@ -99,7 +99,7 @@
             <div class="box">
                 <i class="fa fa-graduation-cap"></i>
                 <span>2020</span>
-                <h3>THPT VÕ VĂN CHỈNH</h3>
+                <h3>THPT Gò Công Đông</h3>
                 <p>Học tại trường vào năm 2020 và tốt nghiệp vào năm 2023</p>
             </div>
             <div class="box">
