--- a/bmw/details.html
+++ b/bmw/details.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -28,8 +28,9 @@
     </header>
     <section class="home" id="home">
         <div class="home-text">
-            <h1><span>BMW</span> X5 M SPORT</h1>
-            <P>BMW X5 M Sport là một biến thể của dòng xe SUV phổ biến BMW X5, nổi tiếng với sự kết hợp giữa sang trọng, hiệu suất và tính linh hoạt. Gói M Sport thường tăng cường vẻ ngoại hình và khả năng vận hành của xe, mang đến vẻ ngoại thất thể thao thông qua các đặc điểm thiết kế độc đáo, bánh xe lớn hơn và hệ thống treo cứng hơn.
+            <h1><span>BMW</span> 520i M SPORT</h1>
+            <P>
+                Một chút nhẹ nhàng trong dòng sản phẩm BMW là BMW 520i. 520i thực sự là một trong những chiếc xe có tất cả những gì bạn yêu cầu, với số lượng phù hợp. BMW 520i có thể chọn được những danh hiệu cao quý nhất khi có một chiếc xe có thể được giải thích là toàn bộ chiếc xe cỡ trung.
             </P>
             <a href="#about" class="btn">See more</a>
         </div>
@@ -78,9 +79,9 @@
             <div class="about-text">
                 <span>About BMW</span>
                 <h2>Cheap Prices With <br> Quality Cars</h2>
-                <p>Phiên bản X5 M Sport thường bao gồm các tính năng như ghế thể thao, vô lăng thể thao, các cải tiến về thân xe để tăng tính động học và cải thiện nội thất. Ngoài ra, nó có thể đi kèm với các nâng cấp về hiệu suất, nâng cao động cơ và trải nghiệm lái xe so với phiên bản tiêu chuẩn của X5.<br>
+                <p>Phiên bản 520i M Sport thường bao gồm các tính năng như ghế thể thao, vô lăng thể thao, các cải tiến về thân xe để tăng tính động học và cải thiện nội thất. Ngoài ra, nó có thể đi kèm với các nâng cấp về hiệu suất, nâng cao động cơ và trải nghiệm lái xe so với phiên bản tiêu chuẩn của X5.<br>
 
-                    Người lái thường đánh giá cao phiên bản M Sport vì cảm giác lái tốt hơn và khả năng xử lý tốt hơn, khiến nó trở nên hấp dẫn hơn trên đường. Tuy nhiên, hệ thống treo cứng hơn có thể làm giảm sự êm ái, đặc biệt là khi di chuyển trên đường xấu.
+                    Người lái thường đánh giá cao phiên bản 520i M Sport vì cảm giác lái tốt hơn và khả năng xử lý tốt hơn, khiến nó trở nên hấp dẫn hơn trên đường. Tuy nhiên, hệ thống treo cứng hơn có thể làm giảm sự êm ái, đặc biệt là khi di chuyển trên đường xấu.
                     </p>
             </div>    
         </div>
@@ -150,18 +151,5 @@
 </section>
 
 <div class="coppyright">
-    <p>&#169; Presented By Nguyễn Hoàng Phúc_49.01.103.066</p>
+    <p>&#169; Presented By Trần Hoàng Nam_49.01.103.051</p>
 </div>
-
-
-
-
-
-
-
-
-
-
-    <script src="details.js"></script>
-</body>
-</html>
