--- a/bmw/details.html
+++ b/bmw/details.html
@@ -46,26 +46,22 @@
 
         <div class="cars-container container">
             <div class="box">
-                <img src="images/car1.png">
+                <img src="c:\Users\ADMIN\Pictures\Camera Roll\th (4).jpg">
                 <h2>BMW RED</h2>
             </div>
             <div class="box">
-                <img src="images/car2.png">
+                <img src="c:\Users\ADMIN\Pictures\Camera Roll\bmw.jpg">
                 <h2>BMW GREEN</h2>
             </div>
             <div class="box">
-                <img src="images/car3.png">
+                <img src="c:\Users\ADMIN\Pictures\Camera Roll\Xehay-520-280421-7.jpg">
                 <h2>BMW GRAY</h2>
             </div>
             <div class="box">
-                <img  src="images/car4.png">
-                <h2>BMW YELLOW</h2>
-            </div>
-            <div class="box">
-                <img src="images/car5.png">
+                <img src="c:\Users\ADMIN\Pictures\BMW 520i.png">
                 <h2>BMW BLACK</h2></div>
             <div class="box">
-                <img src="images/car6.png">
+                <img src="c:\Users\ADMIN\Pictures\Camera Roll\th (3).jpg">
                 <h2>BMW BLACK</h2></div>
             
             </div>
@@ -74,7 +70,7 @@
     <section class="about" id="about">
         <div class="row">
             <div class="video-container">
-                <video src="images/BMW X5 M Sport-.mp4" loop autoplay controls></video>
+                <video src="https://video.search.yahoo.com/video/play;_ylt=Awr92OznpHxliOgO5V37w8QF;_ylu=c2VjA3NyBHNsawN2aWQEZ3BvcwMxOQ--?p=video+gi%E1%BB%9Bi+thi%E1%BB%87u+bmw+520i&vid=44f09baf48c8ed3332e2195066e751f8&turl=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOVP.J3p0yPO7LkNEh-2cf1zKEwEkII%26pid%3DApi%26h%3D520%26w%3D292%26c%3D7%26rs%3D1&rurl=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DY5BzRkOhS1g&tit=%3Cb%3EBMW%3C%2Fb%3E+%3Cb%3E520i%3C%2Fb%3E+Luxury+Line+2023+%E2%99%A5%EF%B8%8F%F0%9F%94%A5&c=18&sigr=YX2v9qi4HQSb&sigt=nEGrjEkxd5RG&sigi=pdtt7JIcBzrG&fr=p%3As%2Cv%3Av&h=520&w=292&l=31&age=1692098089&fr=mcafee&type=E210US91215G0&tt=b" loop autoplay controls></video>
             </div>
             <div class="about-text">
                 <span>About BMW</span>
