--- a/bmw/details.html
+++ b/bmw/details.html
@@ -46,22 +46,25 @@
 
         <div class="cars-container container">
             <div class="box">
-                <img src="c:\Users\ADMIN\Pictures\Camera Roll\th (4).jpg">
+                <img src="C:\Users\ADMIN\Downloads">
                 <h2>BMW RED</h2>
             </div>
             <div class="box">
-                <img src="c:\Users\ADMIN\Pictures\Camera Roll\bmw.jpg">
+                <img src="C:\Users\ADMIN\Downloads">
                 <h2>BMW GREEN</h2>
             </div>
             <div class="box">
-                <img src="c:\Users\ADMIN\Pictures\Camera Roll\Xehay-520-280421-7.jpg">
-                <h2>BMW GRAY</h2>
-            </div>
-            <div class="box">
-                <img src="c:\Users\ADMIN\Pictures\BMW 520i.png">
+                <img src="C:\Users\ADMIN\Downloads">
                 <h2>BMW BLACK</h2></div>
             <div class="box">
-                <img src="c:\Users\ADMIN\Pictures\Camera Roll\th (3).jpg">
+                <img src="C:\Users\ADMIN\Downloads">
+                <h2>BMW BLACK</h2></div>
+            
+            <div class="box">
+                <img src="C:\Users\ADMIN\Downloads">
+                <h2>BMW BLACK</h2></div>
+            <div class="box">
+                <img src="C:\Users\ADMIN\Downloads">
                 <h2>BMW BLACK</h2></div>
             
             </div>
