--- a/bmw/details.html
+++ b/bmw/details.html
@@ -73,7 +73,7 @@
     <section class="about" id="about">
         <div class="row">
             <div class="video-container">
-                <video src="https://video.search.yahoo.com/video/play;_ylt=Awr92Oy4rnxlyqkPkOD7w8QF;_ylu=c2VjA3NyBHNsawN2aWQEZ3BvcwMyMA--?p=gg+video+gi%E1%BB%9Bi+thi%E1%BB%87u+bmw+520i&vid=990c4f857fa76d5de65b0ba4f4e42715&turl=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOVP.F8RLCTSR7s1b3l8f8UrabwEsDh%26pid%3DApi%26h%3D225%26w%3D300%26c%3D7%26rs%3D1&rurl=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DhLjR_L6TAw0&tit=Eisenmann+N%28New+Version%29+%3Cb%3EBMW%3C%2Fb%3E+%3Cb%3E520i%3C%2Fb%3E+M52B20&c=19&sigr=QRi4ZpzLrMos&sigt=5ijfH72wY4r4&sigi=fietEiDnqCkv&fr=p%3As%2Cv%3Av&h=225&w=300&l=53&age=1302807295&fr=mcafee&type=E210US91215G0&tt=b" loop autoplay controls></video>
+                <video src="C:\Users\ADMIN\Pictures\Camera Roll" loop autoplay controls></video>
             </div>
             <div class="about-text">
                 <span>About BMW</span>
