--- a/bmw/details.html
+++ b/bmw/details.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -46,25 +46,25 @@
 
         <div class="cars-container container">
             <div class="box">
-                <img src="C:\Users\ADMIN\Downloads">
+                <img src="c:\Users\ADMIN\Downloads\th (4).png">
                 <h2>BMW RED</h2>
             </div>
             <div class="box">
-                <img src="C:\Users\ADMIN\Downloads">
-                <h2>BMW GREEN</h2>
+                <img src="c:\Users\ADMIN\Downloads\Xehay-520-280421-7.png">
+                <h2>BMW GREY</h2>
             </div>
             <div class="box">
-                <img src="C:\Users\ADMIN\Downloads">
-                <h2>BMW BLACK</h2></div>
+                <img src="c:\Users\ADMIN\Downloads\th (5).png">
+                <h2>BMW BLUE</h2></div>
             <div class="box">
-                <img src="C:\Users\ADMIN\Downloads">
-                <h2>BMW BLACK</h2></div>
+                <img src="c:\Users\ADMIN\Downloads\th (6).png">
+                <h2>BMW BLUE</h2></div>
             
             <div class="box">
-                <img src="C:\Users\ADMIN\Downloads">
-                <h2>BMW BLACK</h2></div>
+                <img src="c:\Users\ADMIN\Downloads\th (7).png">
+                <h2>BMW WHITE</h2></div>
             <div class="box">
-                <img src="C:\Users\ADMIN\Downloads">
+                <img src="c:\Users\ADMIN\Downloads\th (3).png">
                 <h2>BMW BLACK</h2></div>
             
             </div>
@@ -73,7 +73,7 @@
     <section class="about" id="about">
         <div class="row">
             <div class="video-container">
-                <video src="C:\Users\ADMIN\Pictures\Camera Roll" loop autoplay controls></video>
+                <video src="https://youtu.be/nm5b4GBz17I" loop autoplay controls></video>
             </div>
             <div class="about-text">
                 <span>About BMW</span>
