--- a/bmw/bmw 520i/XE 2/details.html
+++ b/bmw/bmw 520i/XE 2/details.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA_Compatible" content="IE=edge">
     <title>REVIEW XE BMW</title>
     <link rel="stylesheet" href="details.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://maffu895.github.io/2311COMP180201-TKWEB-49.01.103.073/B%C3%A0i%20t%E1%BA%ADp%20nh%C3%B3m/HTML/trangchu.html' rel='stylesheet'>
 </head>
 <body>
     <header class="header">
