--- a/bmw/bmw 520i/XE 2/details.html
+++ b/bmw/bmw 520i/XE 2/details.html
@@ -28,7 +28,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-text">
-            <h1><span>BMW</span> 520i M sport</h1>
+            <h1><span>BMW</span> 520i </h1>
             <P>Mới đây BMW Việt Nam đã ra mắt BMW 5 Series 2021 với 3 phiên bản vào ngày15/04/2021. Đối với 3 phiên bản nâng cấp cho mẫu xe lần này, BMW 5 series đã thay đổi hoàn toàn về nội và ngoại thất, giúp chiếc xe trở nên sang trọng, hiện đại và đẳng cấp hơn khá nhiều
             </P>
             <a href="#about" class="btn">See more</a>
